JSTests/test262/test/language/expressions/prefix-decrement/arguments.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es5id: 11.4.5-2-2-s
esid: sec-prefix-decrement-operator
description: Strict Mode - SyntaxError is thrown for --arguments
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

--arguments;
